--- a/3term/oop/lab2/MainWindow.ui
+++ b/3term/oop/lab2/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>856</width>
-    <height>600</height>
+    <width>1016</width>
+    <height>700</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>140</x>
       <y>60</y>
-      <width>561</width>
-      <height>29</height>
+      <width>600</width>
+      <height>30</height>
      </rect>
     </property>
     <property name="text">
@@ -30,51 +30,39 @@
      <string>new task</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="taskDate">
+   <widget class="QPushButton" name="dateButton">
     <property name="geometry">
      <rect>
-      <x>710</x>
+      <x>750</x>
       <y>60</y>
-      <width>51</width>
-      <height>31</height>
+      <width>50</width>
+      <height>30</height>
      </rect>
     </property>
     <property name="text">
      <string>date</string>
     </property>
    </widget>
-   <widget class="QWidget" name="verticalLayoutWidget">
+   <widget class="QWidget" name="verticalLayoutWidget_3">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>100</y>
-      <width>354</width>
-      <height>276</height>
+      <x>0</x>
+      <y>30</y>
+      <width>141</width>
+      <height>621</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="calendarForm">
-     <item>
-      <widget class="QCalendarWidget" name="calendar">
-       <property name="gridVisible">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QTimeEdit" name="timeEdit"/>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pushButton">
-         <property name="text">
-          <string>set</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-    </layout>
+    <layout class="QVBoxLayout" name="listsContainer"/>
+   </widget>
+   <widget class="QListWidget" name="tasksContainer">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>100</y>
+      <width>601</width>
+      <height>251</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -82,8 +70,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>856</width>
-     <height>26</height>
+     <width>1016</width>
+     <height>27</height>
     </rect>
    </property>
   </widget>
