--- a/Term4/Web/Lab03/assets/css/main.css
+++ b/Term4/Web/Lab03/assets/css/main.css
@@ -1,15 +1,17 @@
 body {
 	padding: 0;
 	margin: 0;
-	font-family: 'PT Sans', sand-serif, serif;
 	font-size: 14px;
 	line-height: 22px;
 	/*background-image: url('../media/body-background.jpg');*/
 	min-height: 100vh;
-	display: flex; 
-  	flex-direction: column; 
 }
 
 a {
-	color: #dc3545; !important;
+	color: #dc3545;
+	transition: 0.3s;
+}
+
+a:hover {
+	color: #BB2D3B;
 }
