--- a/term6/computational_geometry/lab1/style.css
+++ b/term6/computational_geometry/lab1/style.css
@@ -11,14 +11,14 @@ body {
 }
 
 #main-canvas {
-    --point-color: #3ccf5e;
-    --edge-color: #2db58c;
+    --point-color: #555555;
+    --edge-color: #2d58b5;
     --special-point-color: #00c0bc;
-    --highlight-color: #d8364b;
+    --highlight-color: #e49e08;
     --section-color: #747474;
     --grid-color: #d8dbdb;
     border: 1px solid #637395;
-    border-radius: 2px;
+    border-radius: 4px;
 }
 
 #bottom-bar {
@@ -33,8 +33,8 @@ body {
 .button {
     width: 150px;
     margin: 10px 10px;
-    border: 2px solid #3ccf5e;
-    border-radius: 2px;
+    border: 3px solid #555555;
+    border-radius: 4px;
     color: gray;
     font-size: 1.1em;
     font-weight: bold;
@@ -44,14 +44,14 @@ body {
 }
 
 .active-button {
-    border-color: #3ccf5e;
-    color: #3ccf5e;
+    border-color: #555555;
+    color: #555555;
     cursor: pointer;
     transition: background-color 0.1s ease-in-out;
 }
 
 .active-button:hover {
-    background-color: #3ccf5e;
+    background-color: #555555;
     color: #ffffff;
     cursor: pointer;
 }
